[gd_scene load_steps=7 format=3 uid="uid://sqgffjigjxqa"]

[ext_resource type="Script" path="res://scenes/boss.gd" id="1_koujq"]
[ext_resource type="PackedScene" uid="uid://cr5t51haaru4t" path="res://scenes/projectile.tscn" id="2_s8qgd"]
[ext_resource type="Texture2D" uid="uid://dj56f8su82uyr" path="res://art/character/hades.png" id="2_xrnkl"]
[ext_resource type="PackedScene" uid="uid://cvnmbcgi8aw6x" path="res://scenes/minion.tscn" id="3_nwuh5"]
[ext_resource type="Texture2D" uid="uid://cptv4seobqs5g" path="res://art/particles/healtbar hades.png" id="5_qdld0"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rvmnm"]
radius = 29.0
height = 206.0

[node name="Boss" type="CharacterBody2D"]
script = ExtResource("1_koujq")
projectile_scene = ExtResource("2_s8qgd")
minion_scene = ExtResource("3_nwuh5")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(3.99997, -3)
scale = Vector2(2.5, 2.5)
texture = ExtResource("2_xrnkl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("CapsuleShape2D_rvmnm")

[node name="AttackTimer" type="Timer" parent="."]

[node name="SummonTimer" type="Timer" parent="."]

[node name="TeleportTimer" type="Timer" parent="."]

[node name="MoveTimer" type="Timer" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="UI"]
offset_left = 440.0
offset_top = 591.0
offset_right = 898.0
offset_bottom = 652.0
scale = Vector2(0.6, 0.6)
value = 100.0

[node name="Sprite2D" type="Sprite2D" parent="UI/ProgressBar"]
position = Vector2(230, 75.9583)
scale = Vector2(3.21007, 1.91971)
texture = ExtResource("5_qdld0")

[node name="Label" type="Label" parent="UI/ProgressBar"]
layout_mode = 0
offset_left = 31.6667
offset_top = -56.6667
offset_right = 182.667
offset_bottom = 12.3333
theme_override_font_sizes/font_size = 45
text = "Hades"

[connection signal="timeout" from="AttackTimer" to="." method="shoot_projectile"]
